--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css-files/index.css">
+    <title>Suisei Music</title>
 </head>
+
 <body>
-    
+    <div>
+        <div class="main-section">
+            <div class="main-suisei-pic">
+                <img class="suisei-potrait" src="suisei-pics/suisei-potrait.png">
+            </div>
+            <div class="main-description">
+                <div class="suisei-name">
+                    <p class="main-suisei-name">Hoshimachi Suisei</p>
+                </div>
+                <div class="self-introduction">
+                    <iframe width="600" height="321" src="https://www.youtube.com/embed/K80BbDWB-Ps"
+                    title="Long Suisei introduction" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
