--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css-files/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&family=Roboto:wght@400;500;700&family=Ysabeau+Office:ital,wght@0,300;0,400;0,600;0,800;1,600&display=swap"
+        rel="stylesheet">
+
     <title>Suisei Music</title>
 </head>
 
 <body>
-    <div>
+    <div class="second-body">
         <div class="main-section">
             <div class="main-suisei-pic">
                 <img class="suisei-potrait" src="suisei-pics/suisei-potrait.png">
             </div>
             <div class="main-description">
-                <div class="suisei-name">
-                    <p class="main-suisei-name">Hoshimachi Suisei</p>
-                </div>
-                <div class="self-introduction">
+                <p class="main-suisei-name">Hoshimachi Suisei</p>
+                <p class="mini-description">"It's your shooting star, your diamond in the rough, idol VTuber Hoshimachi
+                    Suisei!"</p>
                     <iframe width="600" height="321" src="https://www.youtube.com/embed/K80BbDWB-Ps"
                     title="Long Suisei introduction" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                </div>
+
             </div>
         </div>
     </div>
