--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&family=Roboto:wght@400;500;700&family=Ysabeau+Office:ital,wght@0,300;0,400;0,600;0,800;1,600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&family=Roboto:wght@400;500;700&family=Ysabeau+Office:ital,wght@0,300;0,400;0,600;0,800;1,400;1,600&display=swap"
         rel="stylesheet">
 
     <title>Suisei Music</title>
@@ -23,16 +23,27 @@
             </div>
             <div class="main-description">
                 <p class="main-suisei-name">Hoshimachi Suisei</p>
-                <p class="mini-description">"It's your shooting star, your diamond in the rough, idol VTuber Hoshimachi
-                    Suisei!"</p>
-                    <iframe width="600" height="321" src="https://www.youtube.com/embed/K80BbDWB-Ps"
-                    title="Long Suisei introduction" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
+                <p class="mini-description">"A psycopath making awesome music"</p>
+                <p class="mini-description-author"><i>- The Times, probably</i></p>
+                <img class="suisei-gif" src="suisei-pics/hoshimachi-suisei-suisei.gif">
+                <a class="main-Youtube" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
+                    <div class="main-Youtube">
+                        <p class="main-Youtube">Youtube</p>
+                    </div>
+                </a>
+                <a class="main-Twitter" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
+                    <div class="main-Twitter">
+                        <p class="main-Twitter">Twitter</p>
+                    </div>
+                </a>
+                <a class="main-Spotify" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
+                    <div class="main-Spotify">
+                        <p class="main-Spotify">Spotify</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
 </body>
 
-</html>
+</html> 
