--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 <p class="mini-description">"A psycopath making awesome music"</p>
                 <p class="mini-description-author"><i>- The Times, probably</i></p>
                 <img class="suisei-gif" src="suisei-pics/hoshimachi-suisei-suisei.gif">
-                <a class="main-Youtube" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
-                    <div class="main-Youtube">
-                        <p class="main-Youtube">Youtube</p>
+                <a class="main-social-media" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
+                    <div class="main-social-media main-Youtube">
+                        <p class="main-social-media">Youtube</p>
                     </div>
                 </a>
-                <a class="main-Twitter" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
-                    <div class="main-Twitter">
-                        <p class="main-Twitter">Twitter</p>
+                <a class="main-social-media" href="https://twitter.com/suisei_hosimati" target="_blank">
+                    <div class="main-social-media main-Twitter">
+                        <p class="main-social-media main-Twitter">Twitter</p>
                     </div>
                 </a>
-                <a class="main-Spotify" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
-                    <div class="main-Spotify">
-                        <p class="main-Spotify">Spotify</p>
+                <a class="main-social-media" href="https://open.spotify.com/artist/726WiFmWkohzodUxK3XjHX?si=Nc5NBAjkQ8Gd_kmug9R3xw" target="_blank">
+                    <div class="main-social-media main-Spotify">
+                        <p class="main-social-media">Spotify</p>
                     </div>
                 </a>
             </div>
