--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
                 <img class="suisei-gif" src="suisei-pics/hoshimachi-suisei-suisei.gif">
                 <a class="main-social-media" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
                     <div class="main-social-media main-Youtube">
+                        <img class="app-logo" src="app-pics/youtube-logo.png">
                         <p class="main-social-media">Youtube</p>
                     </div>
                 </a>
                 <a class="main-social-media" href="https://twitter.com/suisei_hosimati" target="_blank">
                     <div class="main-social-media main-Twitter">
+                        <img class="app-logo" src="app-pics/twitter-logo.png">
                         <p class="main-social-media main-Twitter">Twitter</p>
                     </div>
                 </a>
                 <a class="main-social-media" href="https://open.spotify.com/artist/726WiFmWkohzodUxK3XjHX?si=Nc5NBAjkQ8Gd_kmug9R3xw" target="_blank">
                     <div class="main-social-media main-Spotify">
+                        <img class="app-logo" src="app-pics/spotify-logo.png">
                         <p class="main-social-media">Spotify</p>
                     </div>
                 </a>
