--- a/index.html
+++ b/index.html
@@ -16,37 +16,42 @@
 </head>
 
 <body>
-    <div class="second-body">
-        <div class="main-section">
-            <div class="main-suisei-pic">
-                <img class="suisei-potrait" src="suisei-pics/suisei-potrait.png">
-            </div>
-            <div class="main-description">
-                <p class="main-suisei-name">Hoshimachi Suisei</p>
-                <p class="mini-description">"A psycopath making awesome music"</p>
-                <p class="mini-description-author"><i>- The Times, probably</i></p>
-                <img class="suisei-gif" src="suisei-pics/hoshimachi-suisei-suisei.gif">
-                <a class="main-social-media" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
-                    <div class="main-social-media main-Youtube">
-                        <img class="app-logo" src="app-pics/youtube-logo.png">
-                        <p class="main-social-media">Youtube</p>
-                    </div>
-                </a>
-                <a class="main-social-media" href="https://twitter.com/suisei_hosimati" target="_blank">
-                    <div class="main-social-media main-Twitter">
-                        <img class="app-logo" src="app-pics/twitter-logo.png">
-                        <p class="main-social-media main-Twitter">Twitter</p>
-                    </div>
-                </a>
-                <a class="main-social-media" href="https://open.spotify.com/artist/726WiFmWkohzodUxK3XjHX?si=Nc5NBAjkQ8Gd_kmug9R3xw" target="_blank">
-                    <div class="main-social-media main-Spotify">
-                        <img class="app-logo" src="app-pics/spotify-logo.png">
-                        <p class="main-social-media">Spotify</p>
-                    </div>
-                </a>
-            </div>
+    <img class="background-1" src="misc/background-1.png">
+
+    <div class="main-section">
+        <div class="main-suisei-pic">
+            <img class="suisei-potrait" src="suisei-pics/suisei-potrait.png">
         </div>
+        <div class="main-description">
+            <p class="main-suisei-name">Hoshimachi Suisei</p>
+            <p class="mini-description">"A psycopath making awesome music"</p>
+            <p class="mini-description-author"><i>- The Times, probably</i></p>
+            <img class="suisei-gif" src="suisei-pics/hoshimachi-suisei-suisei.gif">
+            <a class="main-social-media" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
+                <div class="main-social-media">
+                    <img class="app-logo" src="app-pics/youtube-logo.png">
+                    <p class="main-social-media">Youtube</p>
+                </div>
+            </a>
+            <a class="main-social-media" href="https://twitter.com/suisei_hosimati" target="_blank">
+                <div class="main-social-media">
+                    <img class="app-logo" src="app-pics/twitter-logo.png">
+                    <p class="main-social-media">Twitter</p>
+                </div>
+            </a>
+            <a class="main-social-media"
+                href="https://open.spotify.com/artist/726WiFmWkohzodUxK3XjHX?si=Nc5NBAjkQ8Gd_kmug9R3xw" target="_blank">
+                <div class="main-social-media">
+                    <img class="app-logo" src="app-pics/spotify-logo.png">
+                    <p class="main-social-media">Spotify</p>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="latest-release">
+        
     </div>
 </body>
 
-</html> 
+</html>
