--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 </head>
 
 <body>
-    <img class="background-1" src="misc/background-1.png">
+    <img class="background-1" src="pics/misc/background-1.png">
 
     <div class="main-section">
         <div class="main-suisei-pic">
-            <img class="suisei-potrait" src="suisei-pics/suisei-potrait.png">
+            <img class="suisei-potrait" src="pics/suisei-pics/suisei-potrait.png">
         </div>
         <div class="main-description">
             <p class="main-suisei-name">Hoshimachi Suisei</p>
             <p class="mini-description">"A psycopath making awesome music"</p>
             <p class="mini-description-author"><i>- The Times, probably</i></p>
-            <img class="suisei-gif" src="suisei-pics/hoshimachi-suisei-suisei.gif">
+            <img class="suisei-gif" src="pics/suisei-pics/hoshimachi-suisei-suisei.gif">
             <a class="main-social-media" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
                 <div class="main-social-media">
-                    <img class="app-logo" src="app-pics/youtube-logo.png">
+                    <img class="app-logo" src="pics/app-pics/youtube-logo.png">
                     <p class="main-social-media">Youtube</p>
                 </div>
             </a>
             <a class="main-social-media" href="https://twitter.com/suisei_hosimati" target="_blank">
                 <div class="main-social-media">
-                    <img class="app-logo" src="app-pics/twitter-logo.png">
+                    <img class="app-logo" src="pics/app-pics/twitter-logo.png">
                     <p class="main-social-media">Twitter</p>
                 </div>
             </a>
             <a class="main-social-media"
                 href="https://open.spotify.com/artist/726WiFmWkohzodUxK3XjHX?si=Nc5NBAjkQ8Gd_kmug9R3xw" target="_blank">
                 <div class="main-social-media">
-                    <img class="app-logo" src="app-pics/spotify-logo.png">
+                    <img class="app-logo" src="pics/app-pics/spotify-logo.png">
                     <p class="main-social-media">Spotify</p>
                 </div>
             </a>
@@ -50,7 +50,15 @@
     </div>
 
     <div class="latest-release">
-        <div class=""></div>
+        <p class="latest-release">Latest Releases</p>   
+        <div class="album-container">
+            <div class="album-contain-container">
+                <div class="album-cover"></div>
+                <div class="album-cover"></div>
+                <div class="album-cover"></div>
+                <div class="album-cover"></div>
+            </div>
+        </div>
     </div>
 </body>
 
