latest release fixed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
         <p class="latest-release">Latest Releases</p>   
         <div class="album-container">
             <div class="album-contain-container">
-                <div class="album-cover"></div>
+                <div class="album-cover">
+                    <div class="album-image">
+                        <img src="pics/ablum-cover/Pathfinder.jpg" class="album-image">
+                    </div>
+                    <div class="album-infos">
+                        <p class="album-name">Pathfinder</p>
+                        <p class="album-info">Single &#9654; 2023</p>
+                    </div>
+                </div>
                 <div class="album-cover"></div>
                 <div class="album-cover"></div>
                 <div class="album-cover"></div>
