update to online

--- a/index.html
+++ b/index.html
@@ -51,20 +51,53 @@
 
     <div class="latest-release">
         <p class="latest-release">Latest Releases</p>   
-        <div class="album-container">
-            <div class="album-contain-container">
-                <div class="album-cover">
-                    <div class="album-image">
-                        <img src="pics/ablum-cover/Pathfinder.jpg" class="album-image">
-                    </div>
-                    <div class="album-infos">
-                        <p class="album-name">Pathfinder</p>
-                        <p class="album-info">Single &#9654; 2023</p>
-                    </div>
-                </div>
-                <div class="album-cover"></div>
-                <div class="album-cover"></div>
-                <div class="album-cover"></div>
+        <div class="album-container"> <!--toàn bộ cả màn hình-->
+            <div class="album-contain-container"> <!--900px gồm 4 album cover-->
+                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
+                    <div class="album-cover"> <!--từng album-->
+                        <div class="album-image">
+                            <img src="pics/ablum-cover/Suichan-No-Maintenance Song.png" class="album-image">
+                        </div>
+                        <div class="album-infos">
+                            <p class="album-name">Suichan-No-Maintenance...</p>
+                            <p class="album-info">Single &#9654; 2023</p>
+                        </div>
+                    </div>    
+                </a>
+                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/1fgo5rxyOiZ029l1Z48vnw?si=dPRjwk_ORUueD4C8u4xUtQ">
+                    <div class="album-cover"> <!--từng album-->
+                        <div class="album-image">
+                            <img src="pics/ablum-cover/Michizure - THE FIRST TAKE.jpg" class="album-image">
+                        </div>
+                        <div class="album-infos">
+                            <p class="album-name">Michizure - TFT</p>
+                            <p class="album-info">Single &#9654; 2023</p>
+                        </div>
+                    </div>    
+                </a>
+                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/3cCNFfBc9eQHpT0lfmNEXb?si=EDzuMW4bTuC-yCSc3Y5Weg">
+                    <div class="album-cover"> <!--từng album-->
+                        <div class="album-image">
+                            <img src="pics/ablum-cover/Stellar Stellar - THE FIRST TAKE.jpg" class="album-image">
+                        </div>
+                        <div class="album-infos">
+                            <p class="album-name">Stellar Stellar - TFT
+                            </p>
+                            <p class="album-info">Single &#9654; 2023</p>
+                        </div>
+                    </div>    
+                </a>
+                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
+                    <div class="album-cover"> <!--từng album-->
+                        <div class="album-image">
+                            <img src="pics/ablum-cover/Pathfinder.jpg" class="album-image">
+                        </div>
+                        <div class="album-infos">
+                            <p class="album-name">Pathfinder</p>
+                            <p class="album-info">Single &#9654; 2023</p>
+                        </div>
+                    </div>    
+                </a>
             </div>
         </div>
     </div>
