--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 <body>
     <img class="background-1" src="pics/misc/background-1.png">
 
-    <div class="main-section">
-        <div class="main-suisei-pic">
+    <div class="main-section"> <!--div chứa ảnh và gif-->
+        <div class="main-suisei-pic"> <!--div chứa ảnh suisei-->
             <img class="suisei-potrait" src="pics/suisei-pics/suisei-potrait.png">
         </div>
-        <div class="main-description">
+        <div class="main-description"> <!--div chứa gif và 3 cái nút-->
             <p class="main-suisei-name">Hoshimachi Suisei</p>
             <p class="mini-description">"A psycopath making awesome music"</p>
             <p class="mini-description-author"><i>- The Times, probably</i></p>
             <img class="suisei-gif" src="pics/suisei-pics/hoshimachi-suisei-suisei.gif">
+            <!--3 cái nút-->
             <a class="main-social-media" href="https://www.youtube.com/@HoshimachiSuisei" target="_blank">
                 <div class="main-social-media">
                     <img class="app-logo" src="pics/app-pics/youtube-logo.png">
