--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img class="suisei-potrait" src="pics/suisei-pics/suisei-potrait.png">
         </div>
         <div class="main-description"> <!--div chứa gif và 3 cái nút-->
-            <p class="main-suisei-name">Hoshimachi Suisei</p>
+            <p class="header-font main-suisei-name">Hoshimachi Suisei</p>
             <p class="mini-description">"A psycopath making awesome music"</p>
             <p class="mini-description-author"><i>- The Times, probably</i></p>
             <img class="suisei-gif" src="pics/suisei-pics/hoshimachi-suisei-suisei.gif">
@@ -51,7 +51,7 @@
     </div>
 
     <div class="latest-release">
-        <p class="latest-release">Latest Releases</p>   
+        <p class="header-font latest-release">Latest Releases</p>   
         <div class="album-container"> <!--toàn bộ cả màn hình-->
             <div class="album-contain-container"> <!--900px gồm 4 album cover-->
                 <a class="album-cover" target="_blank" href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
@@ -101,6 +101,12 @@
                 </a>
             </div>
         </div>
+    </div>
+
+    <div class="latest-mv-container">
+
+    </div>
+
     </div>
 </body>
 
