--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
     </div>
 
     <div class="latest-mv-container">
-        <p class="header-font">
-            
-        </p>
+        <p class="header-font">Latest MVs</p>
+        <div class="latest-mv-contain-container">
+            <div>
+                
+            </div>
+        </div>
     </div>
 
     </div>
