--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
     </div>
 
     <div class="latest-release">
-        <p class="header-font latest-release">Latest Releases</p>   
+        <p class="header-font latest-release">Latest Releases</p>
         <div class="album-container"> <!--toàn bộ cả màn hình-->
             <div class="album-contain-container"> <!--900px gồm 4 album cover-->
-                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
+                <a class="album-cover" target="_blank"
+                    href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
                     <div class="album-cover"> <!--từng album-->
                         <div class="album-image">
                             <img src="pics/ablum-cover/Suichan-No-Maintenance Song.png" class="album-image">
@@ -63,9 +64,10 @@
                             <p class="album-name">Suichan-No-Maintenance...</p>
                             <p class="album-info">Single &#9654; 2023</p>
                         </div>
-                    </div>    
+                    </div>
                 </a>
-                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/1fgo5rxyOiZ029l1Z48vnw?si=dPRjwk_ORUueD4C8u4xUtQ">
+                <a class="album-cover" target="_blank"
+                    href="https://open.spotify.com/album/1fgo5rxyOiZ029l1Z48vnw?si=dPRjwk_ORUueD4C8u4xUtQ">
                     <div class="album-cover"> <!--từng album-->
                         <div class="album-image">
                             <img src="pics/ablum-cover/Michizure - THE FIRST TAKE.jpg" class="album-image">
@@ -74,9 +76,10 @@
                             <p class="album-name">Michizure - TFT</p>
                             <p class="album-info">Single &#9654; 2023</p>
                         </div>
-                    </div>    
+                    </div>
                 </a>
-                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/3cCNFfBc9eQHpT0lfmNEXb?si=EDzuMW4bTuC-yCSc3Y5Weg">
+                <a class="album-cover" target="_blank"
+                    href="https://open.spotify.com/album/3cCNFfBc9eQHpT0lfmNEXb?si=EDzuMW4bTuC-yCSc3Y5Weg">
                     <div class="album-cover"> <!--từng album-->
                         <div class="album-image">
                             <img src="pics/ablum-cover/Stellar Stellar - THE FIRST TAKE.jpg" class="album-image">
@@ -86,9 +89,10 @@
                             </p>
                             <p class="album-info">Single &#9654; 2023</p>
                         </div>
-                    </div>    
+                    </div>
                 </a>
-                <a class="album-cover" target="_blank" href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
+                <a class="album-cover" target="_blank"
+                    href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
                     <div class="album-cover"> <!--từng album-->
                         <div class="album-image">
                             <img src="pics/ablum-cover/Pathfinder.jpg" class="album-image">
@@ -97,7 +101,7 @@
                             <p class="album-name">Pathfinder</p>
                             <p class="album-info">Single &#9654; 2023</p>
                         </div>
-                    </div>    
+                    </div>
                 </a>
             </div>
         </div>
@@ -106,8 +110,31 @@
     <div class="latest-mv-container">
         <p class="header-font">Latest MVs</p>
         <div class="latest-mv-contain-container">
-            <div>
-                
+            <div class="latest-mv">
+                <div class="mv">
+                    <iframe class="mv" src="https://www.youtube.com/embed/hAI-qjw6J-A"
+                        title="【holo*27 MV】星街すいせい - プラネタリウム【ホロライブ x DECO*27】" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="mv">
+                    <iframe class="mv" src="https://www.youtube.com/embed/4uqONJT6G-M" title="みちづれ / 星街すいせい(official)"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="mv">
+                    <iframe class="mv" src="https://www.youtube.com/embed/BP59Bm6T3_I" title="放送室 / 星街すいせい(official)"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="mv">
+                    <iframe class="mv" src="https://www.youtube.com/embed/r1ZVPTCOCSQ"
+                        title="灼熱にて純情(wii-wii-woo) / 星街すいせい(official)" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
