--- a/index.html
+++ b/index.html
@@ -139,8 +139,13 @@
         </div>
     </div>
 
-    <div >
-
+    <div class="latest-tweet">
+        <p class="header-font">Latest Tweet</p>
+        <div class="tweet-container">
+            <div class="tweet">
+                <blockquote class="twitter-tweet" data-lang="en" data-dnt="true" data-theme="dark"><p lang="ja" dir="ltr"><a href="https://twitter.com/hashtag/%E3%81%BB%E3%81%97%E3%82%89%E3%81%A3%E3%81%B7?src=hash&amp;ref_src=twsrc%5Etfw">#ほしらっぷ</a> コラボありがとうございました‼<br>今日はなんとか活躍できた気がする‼‼‼<br>またこの３人でコラボがあることを願って･･･</p>&mdash; 星街すいせい☄️ホロライブ０期生 (@suisei_hosimati) <a href="https://twitter.com/suisei_hosimati/status/1677693412265586688?ref_src=twsrc%5Etfw">July 8, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
     </div>
 </body>
 
