--- a/timeline.html
+++ b/timeline.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,48 +13,86 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&family=Roboto:wght@400;500;700&family=Ysabeau+Office:ital,wght@0,300;0,400;0,600;0,800;1,400;1,600&display=swap"
         rel="stylesheet">
 
-    <title>Document</title>
+    <title>Timeline</title>
 </head>
+
 <body>
     <img class="background-1" src="pics/misc/background-1.png">
-    
+    <div class="header">
+        <p class="header-font header-1">Timeline</p>
+        <p class="normal-text header-2">Get to know the history of the one and only comet idol, Hoshimachi Suisei!</p>
+    </div>
     <div class="timeline">
         <div class="container left">
-          <div class="content">
-            <h2>2017</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-          </div>
+            <div class="content">
+                <h2 class="text-timeline">18/3/2018</h2>
+                <p class="normal-text text-timeline">Her Twitter account and YouTube channel were created on 18 March
+                    2018. Her introduction video was uploaded four days later on 22 March.</p>
+            </div>
         </div>
         <div class="container right">
-          <div class="content">
-            <h2>2016</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-          </div>
+            <div class="content">
+                <h2 class="text-timeline">21/6/2018</h2>
+                <p class="normal-text text-timeline">On 21 June, she debuted her second 2D costume. Like her first one,
+                    her movements and animations were limited. However, this costume was later updated to have much
+                    more movement, which included her hair and hat.</p>
+            </div>
         </div>
         <div class="container left">
-          <div class="content">
-            <h2>2015</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-          </div>
+            <div class="content">
+                <h2 class="text-timeline">2017</h2>
+                <p class="normal-text text-timeline">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+                    admodum perfecto mnesarchum, vim ea
+                    mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+                    primis ea eam.</p>
+            </div>
         </div>
         <div class="container right">
-          <div class="content">
-            <h2>2012</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-          </div>
+            <div class="content">
+                <h2 class="text-timeline">2017</h2>
+                <p class="normal-text text-timeline">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+                    admodum perfecto mnesarchum, vim ea
+                    mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+                    primis ea eam.</p>
+            </div>
         </div>
         <div class="container left">
-          <div class="content">
-            <h2>2011</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-          </div>
+            <div class="content">
+                <h2 class="text-timeline">2017</h2>
+                <p class="normal-text text-timeline">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+                    admodum perfecto mnesarchum, vim ea
+                    mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+                    primis ea eam.</p>
+            </div>
         </div>
         <div class="container right">
-          <div class="content">
-            <h2>2007</h2>
-            <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-          </div>
+            <div class="content">
+                <h2 class="text-timeline">2017</h2>
+                <p class="normal-text text-timeline">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+                    admodum perfecto mnesarchum, vim ea
+                    mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+                    primis ea eam.</p>
+            </div>
         </div>
-      </div>
+        <div class="container left">
+            <div class="content">
+                <h2 class="text-timeline">2017</h2>
+                <p class="normal-text text-timeline">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+                    admodum perfecto mnesarchum, vim ea
+                    mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+                    primis ea eam.</p>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="content">
+                <h2 class="text-timeline">2017</h2>
+                <p class="normal-text text-timeline">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+                    admodum perfecto mnesarchum, vim ea
+                    mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+                    primis ea eam.</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
