--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
     </div>
 
-    <div class="latest-release">
-        <p class="header-font latest-release">Latest Releases</p>
+    <div class="latest-release-general">
+        <p class="header-font latest-release-general">Latest Releases</p>
         <div class="album-container"> <!--toàn bộ cả màn hình-->
-            <div class="album-contain-container"> <!--900px gồm 4 album cover-->
+            <div class="latest-release"> <!--900px gồm 4 album cover-->
                 <a class="album-cover" target="_blank"
                     href="https://open.spotify.com/album/5sgYGpQmcNXGVhpX8oP82I?si=sMNsyUrgTtCGJsEEENmAcQ">
                     <div class="album-cover"> <!--từng album-->
@@ -108,9 +108,9 @@
         </div>
     </div>
 
-    <div class="latest-mv-container">
+    <div class="latest-mv-general">
         <p class="header-font">Latest MVs</p>
-        <div class="latest-mv-contain-container">
+        <div class="latest-mv-container">
             <div class="latest-mv">
                 <div class="mv">
                     <iframe class="mv" src="https://www.youtube.com/embed/hAI-qjw6J-A"
@@ -140,7 +140,7 @@
         </div>
     </div>
 
-    <div class="latest-tweet">
+    <div class="latest-tweet-general">
         <p class="header-font">Latest Tweet</p>
         <div class="tweet-container">
             <div class="tweet">
